# pharm_agent

./: .env copy.example  .env.example  .gitignore  README.md  README_cursor_rules.md  pipeline.md  pyproject.toml
.clinerules/: 00-project.md  00-project.mdc  01-architecture.md  01-architecture.mdc  02-pharma-agent-behavior.md  03-logging.md  03-logging.mdc  04-obsidian-kb.md  05-testing.md  06-security.md  07-ru-eapo-patent-workflow.md  08-mvp2-source-connectors.mdc  10-readme-update.mdc  12-gradio-ui-state.mdc
.cursor/rules/: 00-project.mdc  01-architecture.mdc  02-pharma-agent-behavior.mdc  03-logging.mdc  04-obsidian-kb.mdc  05-testing.mdc  06-security.mdc  07-mvp2-scientific-agent.mdc  09-mvp2-scientific-memo.mdc  11-gradio-ui.mdc  13-development-prompts.mdc  14-market-agent.mdc
app/: __init__.py  cli.py  config.py  orchestrator.py
app/agents/: market_agent.py  (+5 more)
docs/: RUSSIAN_PATENT_IMPLEMENTATION_PLAN.md
prompts/: intake_enrichment.system.md  intake_enrichment.user.md  market_agent.system.md  market_agent.user.md  patent_finance_agent.system.md  patent_finance_agent.user.md  scientific_agent.system.md  scientific_agent.user.md  synthesis_agent.system.md  synthesis_agent.user.md
tests/: test_cli.py  test_evidence_normalization.py  test_intake_agent.py  test_market_agent.py  test_market_schemas.py  test_obsidian_writer.py  test_orchestrator.py  test_patent_finance_schemas.py  test_pdf_hash_tracking.py  test_pdf_watcher.py  test_schemas.py  test_scientific_agent.py  test_storage_db.py  test_structured_client.py  test_synthesis_agent.py  test_ui_services.py
(+64 files in other folders)
